# webex-byova-gateway-python

./: .dockerignore  .gitignore  AGENTS.MD  AUTHENTICATION_QUICKSTART.md  AWS_DEPLOYMENT_GUIDE.md  BYOVA_Gateway_Flow.json  DOCKER_README.md  Dockerfile  ENVIRONMENT_VARIABLES.md  README.md  SECURITY_GUIDE.md  docker-compose.yml  env.example  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_env_vars.py  test_health.py
audio/: README.md
aws/: README.md  ecs-task-policy.json  task-definition.json
config/: README.md  aws_lex_example.yaml  config.template.yaml  config.yaml
docs/: AWS_LEX_CONFIGURATION.md  Gemfile  README.md  Security-Configuration.md  _config.yml  index.md
docs/_layouts/: guide.html
docs/guides/: byova-aws-lex-setup.md
proto/: README.md  byova_common.proto  voicevirtualagent.proto
src/: __init__.py
src/auth/: __init__.py  jwt_interceptor.py  jwt_validator.py
src/connectors/: README.md  __init__.py  aws_lex_audio_processor.py  aws_lex_config.py  aws_lex_connector.py  aws_lex_error_handler.py  aws_lex_response_handler.py  aws_lex_session_manager.py  i_vendor_connector.py  local_audio_connector.py
src/core/: README.md  (+8 more)
tests/: README.md  conftest.py  test_audio_buffer.py  test_audio_conversion.py  test_audio_extraction.py  test_audio_logger.py  test_audio_recorder.py  test_aws_lex_audio_logging.py  test_aws_lex_audio_processor.py  test_aws_lex_connector.py  test_jwt_validation.py  test_local_audio_connector.py  test_main_env_vars.py  test_main_jwt_interceptor.py  test_message_handling.py  test_wxcc_gateway_server.py
(+12 files in other folders)
